--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,12 @@
         </activity>
 
         <service
-            android:name=".MyIntentService"
-            android:exported="false">
-        </service>
+            android:name=".SpeakTimeJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true"/>
 
         <receiver
-            android:name=".FullscreenActivity$AlarmReceiver"
+            android:name=".AlarmReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="com.stc.fullscreenclock.ACTION_SET_LOW_BRIGHTNESS"/>
