--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,22 +23,7 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".MyIntentService"
-            android:exported="false">
-        </service>
 
-        <receiver
-            android:name=".FullscreenActivity$AlarmReceiver"
-            android:enabled="true">
-            <intent-filter>
-                <action android:name="com.stc.fullscreenclock.ACTION_SET_LOW_BRIGHTNESS"/>
-            </intent-filter>
-        </receiver>
-        <!--
- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
-        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
@@ -47,6 +32,22 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings">
         </activity>
+
+        <service
+            android:name=".SpeakingService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.stc.fullscreenclock.ACTION_SPEAK_TIME"/>
+            </intent-filter>
+        </service>
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.stc.fullscreenclock.ACTION_SET_BRIGHTNESS"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
