--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.android.support:support-vector-drawable:25.2.0'
     compile 'com.rarepebble:colorpicker:2.1.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
 
 
 
