--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".FullscreenActivity"
+            android:name=".ui.FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
@@ -29,12 +29,12 @@
             android:value="@integer/google_play_services_version"/>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".ui.SettingsActivity"
             android:label="@string/title_activity_settings">
         </activity>
 
         <service
-            android:name=".SpeakingService"
+            android:name=".schedule.SpeakingService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -42,7 +42,7 @@
             </intent-filter>
         </service>
         <receiver
-            android:name=".AlarmReceiver"
+            android:name=".schedule.AlarmReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="com.stc.fullscreenclock.ACTION_SET_BRIGHTNESS"/>
