--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           package="com.stc.fullscreen.clock">
 
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
 
     <application
         android:allowBackup="true"
@@ -14,7 +16,6 @@
             android:name=".ui.FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="landscape"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -34,13 +35,7 @@
         </activity>
 
         <service
-            android:name=".schedule.SpeakingService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.stc.fullscreenclock.ACTION_SPEAK_TIME"/>
-            </intent-filter>
-        </service>
+            android:name=".schedule.SpeakingService"/>
         <receiver
             android:name=".schedule.AlarmReceiver"
             android:enabled="true">
