--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,14 @@ android {
             storePassword 'irpandroid'
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.stc.fullscreen.clock"
         minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 3
-        versionName "1.1"
+        targetSdkVersion 26
+        versionCode 10
+        versionName "1.10"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -41,10 +41,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'com.android.support:support-vector-drawable:25.2.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
+    compile 'com.android.support:support-vector-drawable:26.1.0'
+    compile "com.android.support:support-compat:26.1.0"
+
     compile 'com.rarepebble:colorpicker:2.1.0'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 
