--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,6 @@
         </activity>
 
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-
         <activity
             android:name=".ui.SettingsActivity"
             android:label="@string/title_activity_settings">
@@ -37,10 +33,10 @@
         <service
             android:name=".schedule.SpeakingService"/>
         <receiver
-            android:name=".schedule.AlarmReceiver"
-            android:enabled="true">
+            android:name=".utils.AlertSoundReceiver"
+            android:process=":remote">
             <intent-filter>
-                <action android:name="com.stc.fullscreenclock.ACTION_SET_BRIGHTNESS"/>
+                <action android:name="com.stc.fullscreenclock.PLAY_SOUND"/>
             </intent-filter>
         </receiver>
     </application>
